[project]
name = "browser-mc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.40",
    "chainlit>=2.5.5",
    "langchain>=0.3.23",
    "langchain-core>=0.3.55",
    "langchain-google-genai>=2.1.3",
    "openai-agents>=0.0.12",
    "playwright>=1.51.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]
